--- a/技术和解决方案记录/golang/多平台打包.md
+++ b/技术和解决方案记录/golang/多平台打包.md
@@ -23,12 +23,12 @@ start.sh
 cd `dirname $0`
 cd ../
 mkdir -p log
-ps -aux |egrep "EHH_v_0_1_U0" | cut -c 9-15 | xargs kill -9 >/dev/null 2>&1
+ps -aux |egrep "EHH_v_0_1_U0" | awk '{print $2}' | xargs kill -9 >/dev/null 2>&1
 nohup ./bin/EHH_v_0_1_U0 -debug >> log/console_output.log 2>&1 &
 ```
 ###Í£Ö¹½Å±¾
 stop.sh
 ```bash
 #!/bin/bash
-ps -aux |egrep "EHH_v_0_1_U0" | cut -c 9-15 | xargs kill -9 >/dev/null 2>&1
+ps -aux |egrep "EHH_v_0_1_U0" | awk '{print $2}' | xargs kill -9 >/dev/null 2>&1
 ```
