--- a/技术和解决方案记录/mysql/账户管理.md
+++ b/技术和解决方案记录/mysql/账户管理.md
@@ -35,3 +35,9 @@ lower_case_table_names = 1
 ```sql
 SET PASSWORD FOR 'root'@'localhost' = PASSWORD('Passw0rd@mysql!123');
 ```
+SET PASSWORD FOR 'root'@'%' = PASSWORD('Do1up@123456');
+
+
+create user 'root'@'%' identified by 'Passw0rd@123!@#$%^';
+
+flush PRIVILEGES;
